--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{title}}</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,15 +19,15 @@
 <body>
     <!-- Menu navihace-->
     <header>
-        <div class="top-navigation">
+        <div class="navigation">
             <img src="/img/logo/logo.svg" alt="Logo">
             <div class="active-link"></div>
             <ul>
-                <li><a href="#" class="active">Pro nas</a></li>
-                <li><a href="#">Klimatizace</a></li>
-                <li><a href="#">Tepelná čerpadla</a></li>
+                <li class="navigation__item"><a href="/" class="active">Pro nas</a></li>
+                <li class="navigation__item"><a href="/klimatizace.html" class="navigetion__link">Klimatizace</a></li>
+                <li class="navigation__item"><a href="/tepelna-cerpadla.html" class="navigetion__link">Tepelná čerpadla</a></li>
             </ul>
-            <a href="#">Kontaktujte nás</a>
+            <a class="batton--secondary" href="/kontakty.html">Kontaktujte nás</a>
         </div>
     </header>
 
