--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -24,42 +24,65 @@
             <div class="active-link"></div>
             <ul>
                 <li class="navigation__item"><a href="/" class="active">Pro nas</a></li>
-                <li class="navigation__item"><a href="/klimatizace.html" class="navigetion__link">Klimatizace</a></li>
-                <li class="navigation__item"><a href="/tepelna-cerpadla.html" class="navigetion__link">Tepelná čerpadla</a></li>
+                <li class="navigation__item"><a href="/klimatizace/" class="navigetion__link">Klimatizace</a></li>
+                <li class="navigation__item"><a href="/tepelna-cerpadla/" class="navigetion__link">Tepelná čerpadla</a></li>
             </ul>
-            <a class="batton--secondary" href="/kontakty.html">Kontaktujte nás</a>
+            <a class="batton__secondary" href="/kontakty/">Kontaktujte nás</a>
         </div>
     </header>
 
 
     <!--cam sabloma davase -->
-    <main class="main">
+    <main class="contejner">
         {{ content | safe }}
     </main>
 
+    <!-- Blok call to action -->
+    <section class="footer-cta">
+        <div class="footer-cta__container">
+            <div class="footer-cta__background"></div>
+            
+            <div class="footer-cta__body">
+
+                <div class="footer-cta__content">
+
+                    <img class="footer-cta__logo" src="img/icon/icon_logo.svg" alt="logo">
+                    <h2 class="footer-cta__title">Kontaktujte nás a rádi vám poskytneme veškeré potřebné informace.</h2>
+
+                </div>
+
+                <div class="button">
+                    <p class="button__text button__text--wight">Vice informace</p>
+                    <a href="/kontakty/" class="button__icon button__icon--wight"> </a>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <div class="footer-container">
         <div class="footer__iner">
             <div class="footer__colums">
-                <div class="footer-column footer-column--main">
-                    <h3>Kvalita to jsme my. Zařizujeme tepelná čerpadla a klimatizace</h3>
-                    <p>info@vavrac.eu</p>
+                
+                <div class="footer__item ">
+                    <h3 class="footer__header">Kvalita to jsme my. Zařizujeme tepelná čerpadla a klimatizace</h3>
+                    <p class="footer__copy">info@vavrac.eu</p>
                 </div>
 
-                <div class="footer-column footer-column--sub">
-                    <div class="footer-column__items">
-                        <a href="#">Pro nas</a>
-                        <a href="#">Tepelná čerpadla</a>
-                        <a href="#">Klimatizace</a>
-                        <a href="#">Kontakt</a>
-                    </div>
+                <div class="footer__list">
+                    
+                    <a class="footer__links" href="/">Pro nas</a>
+                    <a class="footer__links" href="/tepelna-cerpadla/">Tepelná čerpadla</a>
+                    <a class="footer__links" href="/klimatizace/">Klimatizace</a>
+                    <a class="footer__links" href="/kontakty/">Kontakt</a>
+                
                 </div>
 
-                <div class="footer-column footer-column--info">
-                    <div class="footer-column__items">
-                        <a href="#">Instagram</a>
-                        <a href="#">Facebook</a>
-                    </div>
+                <div class="footer__media">
+                    
+                    <a class="footer__link-media" href="https://www.facebook.com/">Instagram</a>
+                    <a class="footer__link-media" href="https://www.instagram.com/">Facebook</a>
+                
                 </div>
             </div>
         </div>
