--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -46,7 +46,7 @@
 
                 <div class="footer-cta__content">
 
-                    <img class="footer-cta__logo" src="img/icon/icon_logo.svg" alt="logo">
+                    <img class="footer-cta__logo" src="/img/icon/icon_logo.svg" alt="logo">
                     <h2 class="footer-cta__title">Kontaktujte nás a rádi vám poskytneme veškeré potřebné informace.</h2>
 
                 </div>
