--- a/_includes/cta-logo-template copy.njk
+++ b/_includes/cta-logo-template copy.njk
@@ -1,31 +1,30 @@
 ---
 layout: cta-template.njk
-title: cta-logo-template
 ---
 
+<div class="wrepper">
+    <!--cam sabloma davase -->
+    <main class="contejner">
+        {{ content | safe }}
+    </main>
 
-<!--cam sabloma davase -->
-<main class="contejner">
-    {{ content | safe }}
-</main>
 
 
-
-<!-- Blok se značkamy -->
-<div class="logo">
-    <h3 class="logo__title">Spolupraujeme se značkami</h3>
-    <div class="logo__scoup">
-        <div class="logo__items">
-            <img src="/img/logo/logo_lg.svg" alt="lg icon">
-        </div>
-        <div class="logo__items logo__items--small">
-            <img src="/img/logo/logo_samsung.svg" alt="samsung icon">
-        </div>
-        <div class="logo__items">
-            <img src="/img/logo/logo_ivt.svg" alt="ivt icon">
+    <!-- Blok se značkamy -->
+    <div class="logo">
+        <h3 class="logo__title">Spolupraujeme se značkami</h3>
+        <div class="logo__scoup">
+            <div class="logo__items">
+                <img src="/img/logo/logo_lg.svg" alt="lg icon">
+            </div>
+            <div class="logo__items logo__items--small">
+                <img src="/img/logo/logo_samsung.svg" alt="samsung icon">
+            </div>
+            <div class="logo__items">
+                <img src="/img/logo/logo_ivt.svg" alt="ivt icon">
+            </div>
         </div>
     </div>
 </div>
-
 
     
