--- a/_includes/cta-template.njk
+++ b/_includes/cta-template.njk
@@ -1,35 +1,37 @@
 ---
 layout: main-template.njk
-title: cta-template
 ---
 
-<!--cam sabloma davase -->
-<main class="contejner">
-    {{ content | safe }}
+<div class="wrapper">
+        <!--cam sabloma davase -->
+    <main class="contejner">
+        {{ content | safe }}
 
-</main>
+    </main>
 
-<!-- Blok call to action -->
-<section class="footer-cta">
-    <div class="footer-cta__container">
-        <div class="footer-cta__background"></div>
-        
-        <div class="footer-cta__body">
+    <!-- Blok call to action -->
+    <section class="footer-cta">
+        <div class="footer-cta__container">
+            <div class="footer-cta__background"></div>
+            
+            <div class="footer-cta__body">
 
-            <div class="footer-cta__content">
+                <div class="footer-cta__content">
 
-                <img class="footer-cta__logo" src="/img/icon/icon_logo.svg" alt="logo">
-                <h2 class="footer-cta__title">Kontaktujte nás a rádi vám poskytneme veškeré potřebné informace.</h2>
+                    <img class="footer-cta__logo" src="/img/icon/icon_logo.svg" alt="logo">
+                    <h2 class="footer-cta__title">Kontaktujte nás a rádi vám poskytneme veškeré potřebné informace.</h2>
+
+                </div>
+
+                <div class="button">
+                    <p class="button__text button__text--wight">Vice informace</p>
+                    <a href="/kontakty/" class="button__icon button__icon--wight"> </a>
+                </div>
 
             </div>
-
-            <div class="button">
-                <p class="button__text button__text--wight">Vice informace</p>
-                <a href="/kontakty/" class="button__icon button__icon--wight"> </a>
-            </div>
-
         </div>
-    </div>
-</section>
+    </section>
+</div>
+
 
     
