--- a/_includes/cta-logo-template.njk
+++ b/_includes/cta-logo-template.njk
@@ -8,23 +8,9 @@ layout: cta-template.njk
         {{ content | safe }}
     </main>
 
+    {% include 'partials/logo.njk' %}
 
-
-    <!-- Blok se značkamy -->
-    <div class="logo">
-        <h3 class="logo__title">Spolupraujeme se značkami</h3>
-        <div class="logo__scoup">
-            <div class="logo__items">
-                <img src="/img/logo/logo_lg.svg" alt="lg icon">
-            </div>
-            <div class="logo__items logo__items--small">
-                <img src="/img/logo/logo_samsung.svg" alt="samsung icon">
-            </div>
-            <div class="logo__items">
-                <img src="/img/logo/logo_ivt.svg" alt="ivt icon">
-            </div>
-        </div>
-    </div>
+    
 </div>
 
     
