--- a/_includes/cta-logo-template.njk
+++ b/_includes/cta-logo-template.njk
@@ -8,7 +8,7 @@ layout: cta-template.njk
         {{ content | safe }}
     </main>
 
-    {% include 'partials/logo.njk' %}
+    {% include "partials/logo.njk" %}
 
     
 </div>
