--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,15 @@ html {
   box-sizing: inherit;
 }
 
-/*font-family: 'Montserrat', sans-serif
-font-family: 'Lexend Deca', sans-serif*/
 h1 {
-  color: #ff4400;
-  font-size: 20ps;
+  font-family: "Lexend Deca", sans-serif;
+}
+
+h2 {
+  font-family: "Lexend Deca", sans-serif;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
 }
