--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,12 +6,21 @@ html {
   box-sizing: inherit;
 }
 
+$font-base: 'Montserrat', sans-serif;
+$font-special: 'Lexend Deca', sans-serif;
 
 
-/*font-family: 'Montserrat', sans-serif
-font-family: 'Lexend Deca', sans-serif*/
+
 
 h1{
-  color: #ff4400;
-  font-size: 20ps;
+ font-family: $font-special;
+}
+
+h2{
+  font-family: $font-special;
+}
+
+body{
+  font-family: $font-base;
+  font-size: 16px;
 }
