--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,12 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
 }
+
+.main {
+  padding: 50px;
+}
+.main__background {
+  background-color: aqua;
+  height: 15px;
+  width: 15px;
+}
