--- a/_includes/main-template.njk
+++ b/_includes/main-template.njk
@@ -20,14 +20,37 @@
     <!-- Menu navihace-->
     <header>
         <div class="navigation">
-            <img src="/img/logo/logo.svg" alt="Logo">
-            <div class="active-link"></div>
-            <ul>
-                <li class="navigation__item"><a href="/" class="active">Pro nas</a></li>
-                <li class="navigation__item"><a href="/klimatizace/" class="navigetion__link">Klimatizace</a></li>
-                <li class="navigation__item"><a href="/tepelna-cerpadla/" class="navigetion__link">Tepelná čerpadla</a></li>
-            </ul>
-            <a class="batton__secondary" href="/kontakty/">Kontaktujte nás</a>
+            <div class="navigation__conteiner">
+                <img src="/img/logo/logo.svg" alt="Logo">
+                <div class="navigation__link">
+                    <ul class="anvigator__item" >
+                        <li class="navigation__item"><a href="/" class="active">Pro nas</a></li>
+                        <li class="navigation__item"><a href="/klimatizace/" class="navigetion__link">Klimatizace</a></li>
+                        <li class="navigation__item"><a href="/tepelna-cerpadla/" class="navigetion__link">Tepelná čerpadla</a></li>
+                    </ul>
+                </div>
+                
+                <a class="batton__secondary" href="/kontakty/">Kontaktujte nás</a>
+
+                <nav class="menu">
+
+                    <input type="checkbox" class="menu__checkbox" id="menu-checkbox">
+
+                    <div class="menu__hamburher">
+                        <img class="menu__icon" src="/img/icon/icon_hamberher.svg" alt="f">
+                        <p class="menu__icon">Menu</p> 
+                    </div>
+       
+            
+                    <ul class="menu__list">
+                        <li class="menu__item"><a href="/" class="active">Pro nas</a></li>
+                        <li class="menu__item"><a href="/klimatizace/" class="navigetion__link">Klimatizace</a></li>
+                        <li class="menu__item"><a href="/tepelna-cerpadla/" class="navigetion__link">Tepelná čerpadla</a></li>
+                    </ul>
+            
+                </nav>
+
+            </div>
         </div>
     </header>
 
