--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,3 +1,50 @@
 @use 'base/colors';
 @use 'base/reset';
 @use 'base/typography';
+
+
+.navigation{
+
+}
+.navigation__conteiner{
+
+}
+/*.navigation__link{
+
+}
+.anvigator__item{
+
+}
+.navigation__item{
+
+}
+.active{
+
+}
+.navigetion__link{
+
+}
+.batton__secondary{
+
+}
+.menu{
+
+}
+.menu__checkbox{
+
+}
+.menu__hamburher{
+
+}
+.menu__icon{
+
+}
+.menu__title{
+
+}
+.menu__list{
+
+}
+.menu__item{
+
+}*/
