--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,15 @@ ul{
   color: red;
 }
 
+
+.navigation__conteiner{
+  display: block;
+  background-color: black;
+  height: 600px;
+  width: 600px;
+
+}
+
 /*
 
 h2{
